--- a/appendix/template.yaml
+++ b/appendix/template.yaml
@@ -2,7 +2,7 @@ AWSTemplateFormatVersion: '2010-09-09'
 Transform: 'AWS::Serverless-2016-10-31'
 Description: ''
 Resources:
-  postImages:
+  deleteImageFromS3:
     Type: 'AWS::Serverless::Function'
     Properties:
       Handler: lambda_function.lambda_handler
@@ -10,7 +10,10 @@ Resources:
       Description: ''
       MemorySize: 128
       Timeout: 15
-      Role: 'arn:aws:iam::111122223333:role/lambda-dynamodb-access'
+      Role: 'arn:aws:iam::111122223333:role/delete-image-role'
       Environment:
         Variables:
           BUCKET_NAME: serverless-app-photos
+Outputs:
+  FunctionName:
+    Value: !Ref deleteImageFromS3
